# liquiditation-test

./: .env.example  .gitignore  README.md  config.example.yaml  config.testnet.yaml  hyperliquid_mm_bot_agent_prompt.md  pyproject.toml  requirements.txt
docs/: hyperliquid_api_research.md  testnet_pilot_report_001.md  testnet_pilot_runbook.md
scripts/: pilot_summary.py
src/: __init__.py  config.py  hl_client.py  inventory.py  logger.py  main.py  market_data.py  metrics.py  notifier.py  order_manager.py  quote_engine.py  risk.py  sim_fill.py  state.py
tests/: conftest.py  test_config.py  test_hl_client.py  test_integration.py  test_inventory.py  test_market_data.py  test_metrics.py  test_notifier.py  test_order_manager.py  test_quote_engine.py  test_risk.py  test_sim_fill.py  test_state.py
